Frailty API changes for DSM